<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/color3"
    tools:context=".Pergunta3">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/pergunta3"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/pc"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rgPergunta3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:layout_weight="3">

        <RadioButton
            android:id="@+id/rbPerguntaC1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@android:drawable/btn_radio"
            android:text="@string/rc1"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbPerguntaC2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@android:drawable/btn_radio"
            android:text="@string/rc2"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbPerguntaC3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@android:drawable/btn_radio"
            android:text="@string/rc3"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbPerguntaC4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@android:drawable/btn_radio"
            android:text="@string/rc4"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnProximo3"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_proximo"
        android:textSize="18sp" />

</LinearLayout>