<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/color3"
    tools:context=".Pergunta5">

    <TextView
        android:id="@+id/textView8"
        android:text="@string/pergunta5"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="0"
        android:text="@string/pe"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rgPergunta5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:layout_weight="3"
        tools:layout_editor_absoluteX="16dp">

        <RadioButton
            android:id="@+id/rbPerguntaE1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@android:drawable/btn_radio"
            android:text="@string/re1"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbPerguntaE2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@android:drawable/btn_radio"
            android:text="@string/re2"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbPerguntaE3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@android:drawable/btn_radio"
            android:text="@string/re3"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbPerguntaE4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@android:drawable/btn_radio"
            android:text="@string/re4"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnProximo5"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0"
        android:text="@string/btn_proximo"
        android:textSize="18sp" />
</LinearLayout>