<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color3"
    tools:context=".Pergunta1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:text="@string/pergunta1"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/pa"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <RadioGroup
            android:id="@+id/rgPergunta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_editor_absoluteX="16dp">

            <RadioButton
                android:id="@+id/rbPerguntaA1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@android:drawable/btn_radio"
                android:checked="false"
                android:text="@string/ra1"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbPerguntaA2"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@android:drawable/btn_radio"
                android:text="@string/ra3"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbPerguntaA3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@android:drawable/btn_radio"
                android:text="@string/ra4"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbPerguntaA4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:button="@android:drawable/btn_radio"
                android:text="@string/ra2"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btnproximo1"
            android:layout_width="@android:dimen/thumbnail_width"
            android:layout_height="@android:dimen/dialog_min_width_minor"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/btn_proximo"
            android:textSize="18sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>